{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 72,
  "lineage": "9d0e9ef5-6396-9174-5f86-9e3ebd4d600c",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:559050238050:loadbalancer/app/f1-stats-app-alb/a75f516bed6c193f",
            "arn_suffix": "app/f1-stats-app-alb/a75f516bed6c193f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "f1-stats-app-alb-475960202.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:559050238050:loadbalancer/app/f1-stats-app-alb/a75f516bed6c193f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "f1-stats-app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0007c372579698cbb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bc6c7b027b69f325"
              },
              {
                "subnet_id": "subnet-0d634a3d0986e8448"
              }
            ],
            "subnets": [
              "subnet-0bc6c7b027b69f325",
              "subnet-0d634a3d0986e8448"
            ],
            "tags": {
              "Name": "f1-stats-app-alb"
            },
            "tags_all": {
              "Name": "f1-stats-app-alb"
            },
            "vpc_id": "vpc-0de86af62322333de",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:559050238050:listener/app/f1-stats-app-alb/a75f516bed6c193f/1f81568bc5df64ec",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:559050238050:targetgroup/f1-stats-app-tg/a4f84f384c27e953",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:559050238050:listener/app/f1-stats-app-alb/a75f516bed6c193f/1f81568bc5df64ec",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:559050238050:loadbalancer/app/f1-stats-app-alb/a75f516bed6c193f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.main",
            "module.security.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:559050238050:targetgroup/f1-stats-app-tg/a4f84f384c27e953",
            "arn_suffix": "targetgroup/f1-stats-app-tg/a4f84f384c27e953",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:559050238050:targetgroup/f1-stats-app-tg/a4f84f384c27e953",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "f1-stats-app-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0de86af62322333de"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dynamodb",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:559050238050:vpc-endpoint/vpce-0fe67458a45153b90",
            "cidr_blocks": [
              "35.71.100.0/25",
              "35.71.100.128/26",
              "52.94.20.0/24"
            ],
            "id": "vpce-0fe67458a45153b90",
            "owner_id": "559050238050",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-66a7420f",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.ap-south-1.dynamodb",
            "state": "available",
            "tags": {
              "Name": "f1-stats-app-dynamodb-endpoint"
            },
            "tags_all": {
              "Name": "f1-stats-app-dynamodb-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0de86af62322333de"
          },
          "dependencies": [
            "module.dynamodb.data.aws_region.current",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-088b8e771cd529927",
            "domain": "vpc",
            "id": "eipalloc-088b8e771cd529927",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-43-204-178-104.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.178.104",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "f1-stats-app-nat-eip-1"
            },
            "tags_all": {
              "Name": "f1-stats-app-nat-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b5bf4067403336a2",
            "domain": "vpc",
            "id": "eipalloc-0b5bf4067403336a2",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-43-204-104-18.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.104.18",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "f1-stats-app-nat-eip-2"
            },
            "tags_all": {
              "Name": "f1-stats-app-nat-eip-2"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-088b8e771cd529927",
            "association_id": "eipassoc-04d6684a8b788c63d",
            "connectivity_type": "public",
            "id": "nat-09d189ae6f0fd3bce",
            "network_interface_id": "eni-0263d98cae28c6ccc",
            "private_ip": "10.0.1.213",
            "public_ip": "43.204.178.104",
            "subnet_id": "subnet-0d634a3d0986e8448",
            "tags": {
              "Name": "f1-stats-app-nat-1"
            },
            "tags_all": {
              "Name": "f1-stats-app-nat-1"
            }
          },
          "dependencies": [
            "module.nat.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b5bf4067403336a2",
            "association_id": "eipassoc-0575096f219631f68",
            "connectivity_type": "public",
            "id": "nat-04018c103b949d6cd",
            "network_interface_id": "eni-0c63e51b0b5ce8109",
            "private_ip": "10.0.2.33",
            "public_ip": "43.204.104.18",
            "subnet_id": "subnet-0bc6c7b027b69f325",
            "tags": {
              "Name": "f1-stats-app-nat-2"
            },
            "tags_all": {
              "Name": "f1-stats-app-nat-2"
            }
          },
          "dependencies": [
            "module.nat.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:559050238050:route-table/rtb-0e7fb3b6f63063d22",
            "id": "rtb-0e7fb3b6f63063d22",
            "owner_id": "559050238050",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09d189ae6f0fd3bce",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "f1-stats-app-private-rt-1"
            },
            "tags_all": {
              "Name": "f1-stats-app-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de86af62322333de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.aws_eip.nat",
            "module.nat.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:559050238050:route-table/rtb-04a9f576868051ad2",
            "id": "rtb-04a9f576868051ad2",
            "owner_id": "559050238050",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04018c103b949d6cd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "f1-stats-app-private-rt-2"
            },
            "tags_all": {
              "Name": "f1-stats-app-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de86af62322333de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.aws_eip.nat",
            "module.nat.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:559050238050:security-group/sg-0007c372579698cbb",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0007c372579698cbb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "f1-stats-app-alb-sg",
            "name_prefix": "",
            "owner_id": "559050238050",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0de86af62322333de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:559050238050:security-group/sg-06a3c890f9c56c4fa",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a3c890f9c56c4fa",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0007c372579698cbb"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "f1-stats-app-ecs-sg",
            "name_prefix": "",
            "owner_id": "559050238050",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0de86af62322333de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:559050238050:internet-gateway/igw-06e29e28a0be66967",
            "id": "igw-06e29e28a0be66967",
            "owner_id": "559050238050",
            "tags": {
              "Name": "f1-stats-app-igw"
            },
            "tags_all": {
              "Name": "f1-stats-app-igw"
            },
            "vpc_id": "vpc-0de86af62322333de"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:559050238050:subnet/subnet-04c4e647bf873b65e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c4e647bf873b65e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "559050238050",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "f1-stats-app-private-subnet-1"
            },
            "tags_all": {
              "Name": "f1-stats-app-private-subnet-1"
            },
            "vpc_id": "vpc-0de86af62322333de"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:559050238050:subnet/subnet-00e8966508d70b540",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e8966508d70b540",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "559050238050",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "f1-stats-app-private-subnet-2"
            },
            "tags_all": {
              "Name": "f1-stats-app-private-subnet-2"
            },
            "vpc_id": "vpc-0de86af62322333de"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:559050238050:subnet/subnet-0d634a3d0986e8448",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d634a3d0986e8448",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "559050238050",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "f1-stats-app-public-subnet-1"
            },
            "tags_all": {
              "Name": "f1-stats-app-public-subnet-1"
            },
            "vpc_id": "vpc-0de86af62322333de"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:559050238050:subnet/subnet-0bc6c7b027b69f325",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc6c7b027b69f325",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "559050238050",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "f1-stats-app-public-subnet-2"
            },
            "tags_all": {
              "Name": "f1-stats-app-public-subnet-2"
            },
            "vpc_id": "vpc-0de86af62322333de"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:559050238050:vpc/vpc-0de86af62322333de",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0831d92a6f831ca23",
            "default_route_table_id": "rtb-0c8e34dcc99d86dab",
            "default_security_group_id": "sg-0e67444b939d6a938",
            "dhcp_options_id": "dopt-0448c0a397005826b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0de86af62322333de",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c8e34dcc99d86dab",
            "owner_id": "559050238050",
            "tags": {
              "Name": "f1-stats-app-vpc"
            },
            "tags_all": {
              "Name": "f1-stats-app-vpc"
            }
          }
        }
      ]
    }
  ]
}